--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -4,9 +4,14 @@
   
   <h1 id="title">Dr. Norman Borlaug</h1>
   <div id="img-div">
-    <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"></img>
+    <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="Dr. Norman Borlaug in a field"></img>
   </div>
+<section id="tribute info">
+  <a id= "tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target= "_blank"> link to wikipedia
+  </a>
+</section>
   
 </main>
+
 
 
